# build_details

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: error.rs  lib.rs
test_crate/: Cargo.toml  build.rs
test_crate/src/: lib.rs
test_crate/tests/: optional.rs  required.rs
tests/: generate.rs
